# uestc-careye

./: .gitignore  CMakeLists.txt  README.MD  STM32README.MD  build.sh  car.conf  main.cpp  rebuild.sh
Main/: CMakeLists.txt  index.cpp  main.cpp
Thread/: CMakeLists.txt  ringThread.cpp  ringThread.h  videoThread.cpp  videoThread.h
config/: CMakeLists.txt  conf.cpp
cvModel/: CMakeLists.txt  detcetModel.cpp  detcetModel.h  imageController.cpp  imageController.h
data/config/: car.conf
data/image/: info  re.sh
ekho/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  ekho  install.pl  install2.sh  libtool  test_ekho
ekho-data/: jyutping.index  pinyin.voice  zh.dict  zhy.dict
ekho-data/alphabet/: a.gsm  b.gsm  e.gsm  g.gsm  i.gsm  j.gsm  l.gsm  m.gsm  p.gsm  q.gsm  z.gsm
ekho-data/hakka/: a2.gsm  ab1.gsm  ab2.gsm  ab4.gsm  ab6.gsm  ab8.gsm  ad2.gsm  ad5.gsm  ai1.gsm  ai2.gsm  ai4.gsm  ai5.gsm  ai7.gsm  ainn2.gsm  ainn4.gsm  am2.gsm  am4.gsm  am6.gsm  an6.gsm  ang1.gsm  ang4.gsm  ang7.gsm  ann1.gsm  ann2.gsm  ann4.gsm  ann5.gsm  au2.gsm  au6.gsm  au7.gsm  ba2.gsm  ba7.gsm  bad1.gsm  bai1.gsm  bai4.gsm  bai5.gsm  ban2.gsm  ban6.gsm  ban7.gsm  bang5.gsm  bau1.gsm  (+2094 more)
ekho-data/hangul/: a.gsm  aeb.gsm  aes.gsm  aess.gsm  ag.gsm  al.gsm  alm.gsm  ang.gsm  anj.gsm  as.gsm  ba.gsm  bae.gsm  baeng.gsm  baes.gsm  baess.gsm  baet.gsm  bagg.gsm  balm.gsm  bam.gsm  ban.gsm  bang.gsm  bat.gsm  bbae.gsm  bbael.gsm  bbaen.gsm  bbaes.gsm  bbaess.gsm  bbag.gsm  bbal.gsm  bbalm.gsm  bbass.gsm  bbeo.gsm  bbeod.gsm  bbeom.gsm  bbeon.gsm  bbeong.gsm  bbeos.gsm  bbi.gsm  bbib.gsm  bbig.gsm  (+1127 more)
ekho-data/ngangien/: a1.gsm  a3.gsm  a5.gsm  ai3.gsm  ai4.gsm  ai6.gsm  am1.gsm  am4.gsm  am6.gsm  ang1.gsm  ang6.gsm  ao4.gsm  ao5.gsm  ao6.gsm  au2.gsm  au5.gsm  ba2.gsm  ba4.gsm  ba6.gsm  bai2.gsm  bai5.gsm  bak7.gsm  ban1.gsm  ban2.gsm  bang4.gsm  bang6.gsm  bao3.gsm  baong2.gsm  bau1.gsm  bau2.gsm  bau5.gsm  bau6.gsm  bei5.gsm  bei6.gsm  beik7.gsm  bek8.gsm  bi1.gsm  bi4.gsm  bi5.gsm  biat7.gsm  (+825 more)
ekho-data/tibetan/: aa.gsm  aag.gsm  aai.gsm  aal.gsm  aan.gsm  aang.gsm  aar.gsm  ae.gsm  aeg.gsm  aem.gsm  aen.gsm  aes.gsm  ag.gsm  ai.gsm  aid.gsm  aig.gsm  ail.gsm  ain.gsm  ais.gsm  al.gsm  am.gsm  ang.gsm  aob.gsm  aod.gsm  aog.gsm  aos.gsm  au.gsm  aug.gsm  aun.gsm  aung.gsm  aus.gsm  ba.gsm  bad.gsm  bag.gsm  bal.gsm  bang.gsm  bao.gsm  bba.gsm  bbab.gsm  bbag.gsm  (+1906 more)
ekho/ekho-data/: pinyin.index
ekho/speechd-api/: Makefile
ekho/src/: character.h  ekho.h  ekho_dict.cpp  ekho_dict.h  (+1 more)
include/: CurlModel.h  HTTP.h  USBIOModel.h  applog.h  conf.h  config.h  detcetModel.h  imageController.h  mainWindow.h  ringThread.h  subWindow.h  videoThread.h  weatherApi.h
log/: CMakeLists.txt
opencv/: CMakeCache.txt  CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  build.xml  cmake_install.cmake  cmake_uninstall.cmake
rebuild/: CMakeCache.txt
ring/: CMakeLists.txt  ekhoModel.cpp  ekhoModel.h
serialModel/: CMakeLists.txt  USBIOModel.cpp
weather/: CMakeLists.txt  CurlModel.cpp  weatherApi.cpp
window/: CMakeLists.txt  mainWindow.cpp
(+6683 files in other folders)
