cmake_minimum_required(VERSION 3.0)
project(UESTC_MobileEye)
set(CMAKE_CXX_STANDARD 11)
set(PROJECT_BINARY_DIR ${PROJECT_BINARY_DIR}/bin)
INCLUDE_DIRECTORIES(include)
link_directories(${PROJECT_BINARY_DIR}/libs ${PROJECT_BINARY_DIR}/lib /usr.local/libs /usr/lib)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/libs)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
add_subdirectory(weather)
add_subdirectory(cvModel)
add_subdirectory(Thread)
add_subdirectory(Main)
add_subdirectory(config)

