cmake_minimum_required(VERSION 3.7)
project(UESTC_SafeEye)
FIND_PACKAGE(OpenCV REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK2 REQUIRED gtk+-2.0)
include_directories(${GTK2_INCLUDE_DIRS})
link_directories(${GTK2_LIBRARY_DIRS})
add_definitions(${GTK2_CFLAGS_OTHER})
set(CMAKE_CXX_STANDARD 11)
set(window mainWindow.cpp)
add_library(window SHARED ${window})
target_link_libraries(window ${OpenCV_LIBS} ${GTK2_LIBRARIES} log Thread config)
